--- a/W7D5/Benchbnb/app/views/layouts/application.html.erb
+++ b/W7D5/Benchbnb/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbpXsRlCrac7KXOJkLlRx_awMlUnETswM"></script>
   </head>
 
   <body>
