--- a/W7D5/Benchbnb/app/views/static_pages/root.html.erb
+++ b/W7D5/Benchbnb/app/views/static_pages/root.html.erb
@@ -1,1 +1,6 @@
+<% if current_user %>
+  <script>
+     window.currentUser = <%= render( "api/users/user.json", user: current_user).html_safe %>
+  </script>
+<% end %>
 <main id="root"></main>
